[gd_scene format=3 uid="uid://b8k8aspnw3u76"]

[ext_resource type="Script" uid="uid://df3w0n4e6skn2" path="res://components/slot_machine/hand/container.gd" id="1_hxlu5"]

[node name="Container" type="MarginContainer" unique_id=1540981340]
custom_minimum_size = Vector2(64, 64)
offset_right = 64.0
offset_bottom = 64.0
script = ExtResource("1_hxlu5")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
